# NuMeTriS

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: NuMeTriS.rst  conf.py  index.rst  install.rst  license.srt
src/NuMeTriS/: Graph_Class.py  Sparse_Graph_Class.py  Utility_Functions.py  Utility_Functions_sparse.py  __init__.py
tests/: nodes_2000.npy  run_all.sh  test_DBCM.py  test_DBCM_CReMa.py  test_RBCM.py  test_RBCM_CRWCM.py  tradeflow_2000.npy
