[build-system]
requires = ["setuptools>=61.2.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NuMeTriS"
version = "0.0.4"
description = "NuMeTris is a package for Maximum-Entropy models for triadic pattern detection. It contains known models such as DBCM and RBCM for binary motif analysis, and contain mixture models such as DBCM+CReMa and RBCM+CRWCM for weighted triadic motif analysis. The models are solved and routine are present for numeric ensemble generation and the computation of the triadic z-scores for triadic sub-graph occurrence, average flux and intensity."
readme = "README.md"
license = {file = "GNU General Public License v3"}
authors = [{ name = "Marzio Di Vece", email = "marzio.divece@imtlucca.it" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["maximum entropy methods", "network motifs", "pattern detection", "graph","network", "entropy"]
dependencies = [
    "numpy >= 1.21.5",
    "numba >= 0.56.4",
    "matplotlib >= 3.6.1",
    'tomli; python_version >= "3.9"',
]
requires-python = ">=3.9"

    [project.optional-dependencies]
    dev = ["pytest"]

    [project.urls]
    Homepage = "https://github.com/MarsMDK/NuMeTriS"    
    
    

[tool.setuptools]
py-modules = ["NuMeTriS"]
